--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -1,5 +1,43 @@
+@model ResultsViewModel<PeopleViewModel>
 @{
     ViewData["Title"] = "People";
 }
 
-<h1>People Index</h1>
+<h1 class = "text center">People Index</h1>
+@if (Model.Results?.Count() > 0)
+{
+    <div class="d-flex flex-row flex-wrap">
+        @foreach (var person in Model.Results)
+        {
+        <div class = "col-12 col-sm-6 col-md-4 col-lg-3 item-container"> 
+            <div class = "item">
+                <h4>@person.Name</h4>
+                <div class = "item-traits">
+                    <p>Mass: @person.Mass</p>
+                    <p>Height: @person.Height</p>
+                    <p>Born: @person.BirthYear</p>
+                </div>
+            </div> 
+        </div>
+        }
+    </div>
+    <div class = "d-flex flex-row justify-content-between p-2">
+    @if (Model.Previous is not null)
+    {
+        <a asp-action="Index" asp-route-page="@Model.PreviousPageNum">Previous</a>
+    }
+    else
+    {
+        <span></span>
+    }
+    </div>
+    @if (Model.Next is not null)
+    {
+        <a asp-action="Index" asp-route-page="@Model.NextPageNum">Next</a>
+    }
+    }
+    else
+    {
+    <p>There are no results for this page.</p>
+    }
+  
