--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -10,14 +10,14 @@
         @foreach (var person in Model.Results)
         {
         <div class = "col-12 col-sm-6 col-md-4 col-lg-3 item-container"> 
-            <div class = "item">
+            <a asp-action="Person" asp-route-id="@person.Id" class="item">
                 <h4>@person.Name</h4>
                 <div class = "item-traits">
                     <p>Mass: @person.Mass</p>
                     <p>Height: @person.Height</p>
                     <p>Born: @person.BirthYear</p>
                 </div>
-            </div> 
+            </a> 
         </div>
         }
     </div>
