--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -26,6 +26,8 @@ body {
 }
 
 .item {
+  display: block;
+  color: #444;
   border: solid 1px lightgrey;
   border-radius: 4px;
   padding: 2rem 1rem;
@@ -37,6 +39,7 @@ body {
 }
 
 .item:hover {
+  color: #000;
   box-shadow:
     0 4px 8px 0 rgba(0, 0, 0, 0.5),
     0 6px 20px 0 rgba(0, 0, 0, 0.5);
